# Hate-Speech-RAG-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY.md  alembic.ini  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  pyproject.toml
.railway/: railway.ts
alembic/: env.py
app/: __init__.py  main.py  worker_main.py
docker/: railway-backend-entrypoint.sh
docs/: 00_project_brief.md  01_user_scenarios.md  02_hld.md  03_data_model.md  04_pipeline_jobs.md  05_api_spec.md  06_report_spec.md  07_backend_design.md  08_mvp_plan.md  09_implementation_decisions.md  10_docker_environment.md  11_definition_corpus_targets.md  12_category_taxonomy.md  13_rag_chunking_prompt_strategy.md  14_delivery_worklog.md  15_predeploy_runbook.md  16_completion_audit.md  17_live_validation_evidence.md  18_stitch_frontend_delivery.md  19_rag_methodology_reproducibility.md  20_rag_job_progress_diagnosis.md  21_stale_job_recovery.md  22_rag_parallel_processing_plan.md  23_rag_parallel_technical_design.md  24_rag_parallel_delivery.md  25_interactive_comment_network.md  26_report_analysis_predeploy_validation.md  27_figma_rag_pipeline_flowchart.md  28_detailed_taxonomy_v03.md  29_embed2_background_reindex.md  30_auth_oauth_byok.md  31_public_surface_hardening.md  32_sentence_aware_script_report.md  33_prelogin_public_samples_stitch.md  34_google_oauth_public_samples_delivery.md  35_api_key_issuance_guides_delivery.md  36_byok_security_injection_audit.md  37_byok_parallel_failure_diagnosis.md  38_hatescope_home_public_sample_delivery.md  (+8 more)
experiments/: __init__.py  io.py  (+5 more)
(+135 files in other folders)
