[project]
name = "youtube-hatespeech-report"
version = "0.1.0"
description = "Single-video YouTube hate speech analysis report service."
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
