[project]
name = "youtube-hatespeech-report"
version = "0.1.0"
description = "Single-video YouTube hate speech analysis report service."
requires-python = ">=3.11,<3.13"
dependencies = [
    "alembic>=1.16",
    "anthropic>=0.116.0",
    "chromadb>=1.5.9",
    "fastapi>=0.116",
    "httpx>=0.28.1",
    "jinja2>=3.1",
    "langfuse>=4.13.2",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.10",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0",
    "uvicorn>=0.35",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
